v3/crates/metadata-resolve/tests/failing/model_permissions/non_custom_type_in_field/resolve_error.snap
---
source: crates/metadata-resolve/tests/metadata_golden_tests.rs
expression: string
input_file: crates/metadata-resolve/tests/failing/model_permissions/non_custom_type_in_field/metadata.json
---
Error: Error in model permission for model 'institutions (in subgraph default)' for role 'admin': in select filter permissions: expected object type for field location but field had type Int
    ╭─[ <unknown>:18:36 ]
    │
 14 │                 "role": "admin",
    │                         ───┬───  
    │                            ╰───── Error in model permission for the role 'admin' on the model 'institutions'
    │ 
 18 │                       "fieldName": "location",
    │                                    ─────┬────  
    │                                         ╰────── Expected field 'location' to have an object type but instead found 'Int'
────╯
